gfx/layers/ipc/VideoBridgeParent.h
@@ -27,6 +27,7 @@ class VideoBridgeParent final : public PVideoBridgeParent,
 
   static void Open(Endpoint<PVideoBridgeParent>&& aEndpoint,
                    VideoBridgeSource aSource);
+  static void Shutdown();
 
   TextureHost* LookupTexture(uint64_t aSerial);
 
@@ -65,6 +66,7 @@ class VideoBridgeParent final : public PVideoBridgeParent,
   void Bind(Endpoint<PVideoBridgeParent>&& aEndpoint);
 
   void ActorDealloc() override;
+  void ReleaseCompositorThread();
 
   // This keeps us alive until ActorDestroy(), at which point we do a
   // deferred destruction of ourselves.
